--- a/ListeDePlan/affichage.css
+++ b/ListeDePlan/affichage.css
@@ -9,7 +9,8 @@
 /* Tableau */
 .plan-table {
   width: max-content;
-  border-collapse: collapse;
+  border-collapse: separate;
+  border-spacing: 0;
   background-color: #2c2c2c;
   color: white;
   margin: 0;
@@ -26,6 +27,7 @@
   position: relative;
   z-index: 1;
   box-sizing: border-box;
+  background-clip: padding-box;
 }
 
 /* Entêtes fixes en haut */
