--- a/Gantt/gantt.css
+++ b/Gantt/gantt.css
@@ -15,8 +15,8 @@
 /* Colonne Émetteur */
 #task-list {
   width: 250px;
-  background-color: #2c2c2c;
-  border-right: 3px solid #666;
+  background-color: #ffffff;
+  border-right: 3px solid #ed1b2d;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
@@ -24,14 +24,15 @@
 
 /* Entête Émetteur */
 .header {
-  background-color: #444;
+  background-color: #004990;
   font-weight: bold;
   font-size: 16px;
   text-align: center;
   height: 59px;
   line-height: 59px;
-  border-bottom: 2px solid #666;
+  border-bottom: 2px solid #ed1b2d;
   padding: 0;
+  color: #ffffff;
 }
 
 /* Conteneur des lignes d'émetteur */
@@ -46,11 +47,12 @@
   align-items: center;
   justify-content: center;
   font-size: 14px;
-  border-bottom: 1px solid #444;
+  border-bottom: 1px solid #ed1b2d;
   text-align: center;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  color: #004990;
 }
 
 /* Partie droite contenant le Gantt */
@@ -63,7 +65,7 @@
 /* Diagramme de Gantt */
 #gantt {
   flex-grow: 1;
-  background-color: #1e1e1e;
+  background-color: #ffffff;
   overflow: hidden; /* PAS auto */
 }
 
@@ -72,7 +74,7 @@
   height: 20px;
   overflow-x: auto; 
   overflow-y: hidden;
-  background-color: #1e1e1e;
+  background-color: #ffffff;
 }
 
 /* Conteneur interne du scroll horizontal */
@@ -86,7 +88,7 @@
   flex-grow: 1;
   overflow-x: auto;
   overflow-y: hidden;
-  background-color: #1e1e1e;
+  background-color: #ffffff;
 }
 
 #gantt-scrollbar-fixed {
@@ -95,9 +97,9 @@
   left: 250px;
   right: 0;
   height: 20px;
-  background-color: #1e1e1e;
+  background-color: #ffffff;
   overflow-x: auto;
   overflow-y: hidden;
   z-index: 999;
-  border-top: 1px solid #555;
+  border-top: 1px solid #ed1b2d;
 }
