--- a/ListeDePlan/AjouterProjet.css
+++ b/ListeDePlan/AjouterProjet.css
@@ -4,9 +4,9 @@ dialog {
   width: 500px;
   max-width: 95vw;
   padding: 20px;
-  background-color: #2c2c2c;
-  color: white;
-  border: 1px solid #444;
+  background-color: #ffffff;
+  color: #004990;
+  border: 1px solid #ed1b2d;
   border-radius: 5px;
   box-shadow: 0 5px 15px rgba(0,0,0,0.3);
 }
@@ -30,9 +30,9 @@ dialog input {
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
-  background-color: #444;
-  border: 1px solid #666;
-  color: white;
+  background-color: #ffffff;
+  border: 1px solid #ed1b2d;
+  color: #004990;
   box-sizing: border-box; /* Important pour que le padding ne dépasse pas */
 }
 
@@ -52,11 +52,13 @@ dialog button {
 }
 
 dialog button[type="submit"] {
-  background-color: #4CAF50; /* Vert */
+  background-color: #004990; /* Vert */
+  color: #ffffff;
 }
 
 dialog button.cancel-button {
-  background-color: #666; /* Gris */
+  background-color: #ed1b2d; /* Gris */
+  color: #ffffff;
 }
 
 dialog button:hover {
