--- a/ListeDePlan/style.css
+++ b/ListeDePlan/style.css
@@ -2,20 +2,20 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #2c2c2c;
-    color: #f0f0f0;
+    background-color: #ffffff;
+    color: #004990;
 }
   
 .sticky-container {
     position: sticky;
     top: 0;
-    background-color: #2c2c2c;
+    background-color: #ffffff;
     padding: 20px;
     display: flex;
     gap: 20px;
     align-items: center;
     z-index: 1000;
-    border-bottom: 1px solid #444;
+    border-bottom: 1px solid #ed1b2d;
 }
   
 .dropdown-container {
@@ -31,9 +31,9 @@ label {
 select {
     width: 220px;
     padding: 8px;
-    background-color: #444;
-    color: #fff;
-    border: 1px solid #666;
+    background-color: #004990;
+    color: #ffffff;
+    border: 1px solid #ed1b2d;
     border-radius: 4px;
 }
   
@@ -44,8 +44,8 @@ select {
   width: 100%;
   margin-top: 10px; /* (Peut être retiré car 'bottom: 0' s'en charge) */
   padding: 10px;
-  background-color: #f4f4f4;
-  color: black;
+  background-color: #ffffff;
+  color: #004990;
   box-sizing: border-box; /* Assure que le padding ne déborde pas */
   box-shadow: 0 -2px 5px rgba(0,0,0,0.1); /* Ombre portée vers le haut */
 }
@@ -53,12 +53,12 @@ select {
 .add-form button {
   padding: 5px 10px;
   cursor: pointer;
-  background-color: #6c757d; /* Un gris standard pour les boutons */
-  color: white;
+  background-color: #004990; /* Un gris standard pour les boutons */
+  color: #ffffff;
   border: none;
   border-radius: 4px;
 }
 
 .add-form button:hover {
-  background-color: #5a6268; /* Un gris un peu plus foncé au survol */
+  background-color: #ed1b2d; /* Un gris un peu plus foncé au survol */
 }
