--- a/gestion-depenses/style.css
+++ b/gestion-depenses/style.css
@@ -146,3 +146,15 @@ th {
     display: flex;
     gap: 5px;
 }
+
+.billing-percentage {
+  width: 80px;
+  margin-bottom: 0;
+  padding: 6px;
+}
+
+.billing-percentage{
+  width: 80px;
+  padding: 6px;
+  margin: 0;
+}
