--- a/Planning Projet/assets/css/styles.css
+++ b/Planning Projet/assets/css/styles.css
@@ -184,3 +184,30 @@
     --col-line: 110px;
   }
 }
+
+/* Force l'affichage correct du contenu custom des groupes vis-timeline */
+#planningTimeline .vis-labelset .vis-label .vis-inner {
+  width: 100% !important;
+  height: 100% !important;
+  overflow: hidden;
+}
+
+#planningTimeline .vis-labelset .vis-label {
+  display: flex;
+  align-items: center;
+}
+
+/* Notre grille 4 colonnes */
+#planningTimeline .group-row-grid {
+  display: grid !important;
+  grid-template-columns: var(--col-id2) var(--col-task) var(--col-type) var(--col-line);
+  align-items: center;
+  width: calc(var(--left-panel-width) - 16px);
+  min-height: 34px;
+  padding: 0 8px;
+  box-sizing: border-box;
+}
+
+#planningTimeline .group-row-grid > div {
+  min-width: 0;
+}
